<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_margin="10dp"
    android:scrollbars="vertical"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="91dp">


   <android.support.v7.widget.CardView
       android:elevation="10dp"
       app:cardMaxElevation="12dp"
       android:layout_gravity="center"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

       <android.support.constraint.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="10dp"
           app:layout_constraintBottom_toTopOf="@+id/guideline2"
           app:layout_constraintTop_toTopOf="@+id/guideline2"
           tools:layout_editor_absoluteX="10dp"
           tools:layout_editor_absoluteY="91dp">

           <Button
               android:id="@+id/time_btn"
               android:layout_width="wrap_content"
               android:layout_height="38dp"
               android:layout_marginBottom="16dp"
               android:text="@string/choose_time"
               app:layout_constraintBottom_toTopOf="@+id/guideline"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toEndOf="@+id/date_tbn" />

           <TextView
               android:id="@+id/time_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="8dp"
               android:text="@string/_00_00_00"
               android:textAlignment="center"
               app:layout_constraintBottom_toTopOf="@+id/time_btn"
               app:layout_constraintEnd_toEndOf="@+id/time_btn"
               app:layout_constraintStart_toStartOf="@+id/time_btn"
               tools:text="00:00:00" />

           <TextView
               android:id="@+id/priority_tv2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:layout_marginBottom="100dp"
               android:text="@string/time_and_date"
               android:textSize="24sp"
               android:textStyle="bold"
               app:layout_constraintBottom_toTopOf="@+id/guideline"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="@+id/guideline2"
               app:layout_constraintVertical_bias="0.6" />

           <EditText
               android:id="@+id/title_edt"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginTop="60dp"
               android:layout_marginEnd="8dp"
               android:autofillHints=""
               android:ems="10"
               android:hint="@string/enter_todo_list_title_here"
               android:inputType="textPersonName"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <RadioGroup
               android:id="@+id/status_rgb"
               android:layout_width="219dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginTop="40dp"
               android:orientation="horizontal"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.22"
               app:layout_constraintStart_toEndOf="@+id/textView2"
               app:layout_constraintTop_toBottomOf="@+id/title_edt">

               <RadioButton
                   android:id="@+id/done_rb"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/done" />

               <RadioButton
                   android:id="@+id/notDone_rb"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/not_done" />
           </RadioGroup>

           <TextView
               android:id="@+id/textView2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="4dp"
               android:layout_marginTop="40dp"
               android:text="@string/status"
               android:textSize="24sp"
               android:textStyle="bold"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/title_edt" />

           <TextView
               android:id="@+id/priority_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="5dp"
               android:text="@string/priority"
               android:textSize="24sp"
               android:textStyle="bold"
               app:layout_constraintBottom_toBottomOf="@+id/priority_rgb"
               app:layout_constraintEnd_toStartOf="@+id/priority_rgb"
               app:layout_constraintHorizontal_bias="0.55"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="@+id/priority_rgb"
               app:layout_constraintVertical_bias="0.0" />

           <RadioGroup
               android:id="@+id/priority_rgb"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginTop="27dp"
               android:layout_marginEnd="6dp"
               android:layout_marginBottom="8dp"
               android:orientation="horizontal"
               app:layout_constraintBottom_toTopOf="@+id/guideline2"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.125"
               app:layout_constraintStart_toEndOf="@+id/priority_tv"
               app:layout_constraintTop_toBottomOf="@+id/status_rgb"
               app:layout_constraintVertical_bias="1.0">

               <RadioButton
                   android:id="@+id/low_rb"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"

                   android:layout_weight="1"
                   android:text="@string/low" />

               <RadioButton
                   android:id="@+id/mid_rb"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"

                   android:layout_weight="1"
                   android:checked="false"
                   android:text="@string/medium" />

               <RadioButton
                   android:id="@+id/high_rb"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"

                   android:layout_weight="1"
                   android:checked="false"
                   android:text="@string/high" />
           </RadioGroup>

           <TextView
               android:id="@+id/date_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="28dp"
               android:text="--/--/--"
               android:textAlignment="center"
               app:layout_constraintEnd_toEndOf="@+id/date_tbn"
               app:layout_constraintHorizontal_bias="0.417"
               app:layout_constraintStart_toStartOf="@+id/date_tbn"
               app:layout_constraintTop_toBottomOf="@+id/priority_tv2"
               tools:text="--/--/--" />

           <Button
               android:id="@+id/date_tbn"
               android:layout_width="wrap_content"
               android:layout_height="38dp"
               android:layout_marginBottom="16dp"
               android:text="@string/choose_date"
               app:layout_constraintBottom_toTopOf="@+id/guideline"
               app:layout_constraintEnd_toStartOf="@+id/time_btn"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toStartOf="parent" />

           <Button
               android:id="@+id/cancel_btn"
               android:layout_width="106dp"
               android:layout_height="38dp"

               android:layout_marginStart="8dp"
               android:layout_marginTop="8dp"
               android:layout_marginBottom="16dp"
               android:text="@string/cancel"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toStartOf="@+id/reset_btn"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintHorizontal_chainStyle="spread_inside"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="@+id/guideline" />

           <Button
               android:id="@+id/submit_btn"
               android:layout_width="84dp"
               android:layout_height="38dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="8dp"
               android:layout_marginBottom="16dp"
               android:text="@string/submit"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toEndOf="@+id/reset_btn"
               app:layout_constraintTop_toTopOf="@+id/guideline" />

           <Button
               android:id="@+id/reset_btn"
               android:layout_width="102dp"
               android:layout_height="38dp"
               android:layout_marginTop="8dp"
               android:layout_marginBottom="16dp"
               android:text="Reset"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toStartOf="@+id/submit_btn"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toEndOf="@+id/cancel_btn"
               app:layout_constraintTop_toTopOf="@+id/guideline"
               app:layout_constraintVertical_bias="0.511" />

           <android.support.constraint.Guideline
               android:id="@+id/guideline"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               app:layout_constraintGuide_begin="395dp" />

           <android.support.constraint.Guideline
               android:id="@+id/guideline2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               app:layout_constraintGuide_begin="235dp" />

           <TextView
               android:id="@+id/dialog_title_tv"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginTop="4dp"
               android:layout_marginEnd="8dp"
               android:text="@string/add_todo"
               android:textSize="30sp"
               android:textStyle="bold"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.502"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

       </android.support.constraint.ConstraintLayout>
   </android.support.v7.widget.CardView>

</ScrollView>